crates/ars-components/src/date_time/range_calendar/snapshots/ars_components__date_time__range_calendar__tests__head_row.snap
---
source: crates/ars-components/src/date_time/range_calendar/tests.rs
expression: snapshot_attrs(&api.head_row_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "head-row",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-calendar",
            ),
        ),
    ],
    styles: [],
}
