crates/ars-components/src/date_time/range_calendar/snapshots/ars_components__date_time__range_calendar__tests__root_disabled_readonly_rtl.snap
---
source: crates/ars-components/src/date_time/range_calendar/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-calendar",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Dir,
            String(
                "rtl",
            ),
        ),
        (
            Id,
            String(
                "range-cal",
            ),
        ),
    ],
    styles: [],
}
