crates/ars-components/src/date_time/range_calendar/snapshots/ars_components__date_time__range_calendar__tests__row.snap
---
source: crates/ars-components/src/date_time/range_calendar/tests.rs
expression: snapshot_attrs(&api.row_attrs(0))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "row",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-calendar",
            ),
        ),
        (
            Data(
                "ars-week-index",
            ),
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
